# init_selenium

./: README.md  init_driver.py  pyproject.toml  requirements.txt  setup.py
driver_info/: .gitignore  langs.json
private/: tests_driver_manager.py
src/init_selenium/: __init__.py  init_driver.py  langs.py
