[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "init-selenium"
version = "0.1.0"
description = "A utility for initializing and managing Selenium WebDriver instances"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "selenium>=4.33.0",
    "chromedriver-autoinstaller>=0.6.4",
    "undetected-chromedriver>=3.5.5"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/init-selenium"
"Bug Tracker" = "https://github.com/yourusername/init-selenium/issues"

[tool.setuptools]
packages = ["init_selenium"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
