[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "init-selenium"
version = "0.1.0"
description = "A utility for initializing and managing Selenium WebDriver instances"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "selenium>=4.33.0",
    "chromedriver-autoinstaller>=0.6.4",
    "undetected-chromedriver>=3.5.5"
]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["init_selenium"]

[tool.setuptools.package-data]
"*" = ["LICENSE.txt"]
